# dio-azure-sql-lab

./: .gitignore  DIO_Azure_SQL_Desafio.ipynb  README.md  pyproject.toml  requirements.txt
src/dio_azure_sql_lab/: __init__.py
